json file fixed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "Modern Portfolio Website Design",
+      "name": "Portfolio",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
